// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CDTrialHomePage snapshot test should pop up start trial modal if there is queryparam source value signup 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main body"
    style="background: transparent url(test-file-stub) no-repeat;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <h1
        class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-large StyledProps--color StyledProps--color-black100"
      >
        cd.continuous
      </h1>
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--padding-bottom-xxlarge"
          style="width: 500px;"
        >
          cd.cdTrialHomePage.startTrial.description
        </p>
        <a
          class="learnMore"
          href="https://ngdocs.harness.io/category/c9j6jejsws-cd-quickstarts"
          rel="noreferrer"
          target="_blank"
        >
          cd.learnMore
        </a>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
          style="width: 300px; height: 45px;"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            cd.cdTrialHomePage.startTrial.startBtn.description
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`CDTrialHomePage snapshot test should render properly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main body"
    style="background: transparent url(test-file-stub) no-repeat;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <h1
        class="StyledProps--font StyledProps--font-h1 StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-large StyledProps--color StyledProps--color-black100"
      >
        cd.continuous
      </h1>
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--padding-bottom-xxlarge"
          style="width: 500px;"
        >
          cd.cdTrialHomePage.startTrial.description
        </p>
        <a
          class="learnMore"
          href="https://ngdocs.harness.io/category/c9j6jejsws-cd-quickstarts"
          rel="noreferrer"
          target="_blank"
        >
          cd.learnMore
        </a>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
          style="width: 300px; height: 45px;"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            getStarted
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
